--- a/coreUI/src/main/res/drawable/switch_custom.xml
+++ b/coreUI/src/main/res/drawable/switch_custom.xml
@@ -4,30 +4,19 @@
         xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="?attr/shadow" />
             <padding
-                android:left="1dp"
-                android:top="1dp"
-                android:right="1dp"
-                android:bottom="1dp" />
-
-            <corners android:radius="100dp"/>
-            <solid android:color="#000000" />
-
-        </shape>
-
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <padding
-                android:left="3dp"
-                android:top="5dp"
-                android:right="3dp"
-                android:bottom="5dp" />
+                android:left="5dp"
+                android:top="4dp"
+                android:right="5dp"
+                android:bottom="4dp" />
             <gradient
                 android:angle="270"
-                android:startColor="#000000"
-                android:centerColor="#222222"
-                android:endColor="#424242"
+                android:startColor= "?attr/primary_endColor"
+                android:centerColor="?attr/primary_centerColor"
+                android:endColor="?attr/primary_startColor"
                 android:type="linear"
                 android:useLevel="false"  />
             <corners android:radius="100dp"/>
@@ -41,8 +30,9 @@
             android:layout_height="match_parent"
             android:shape="rectangle">
 
-            <corners android:radius="100dp" />
-            <solid android:color="#323232" />
+
+            <corners android:radius="10dp" />
+            <solid android:color="?attr/primary_endColor" />
 
         </shape>
     </item>
