--- a/coreUI/src/main/res/layout/dialog.xml
+++ b/coreUI/src/main/res/layout/dialog.xml
@@ -57,10 +57,10 @@
 
         <View
             android:id="@+id/disableView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="#88000000"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
     </FrameLayout>
 
