--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -48,7 +48,8 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:background="@drawable/button_space">
+                android:background="@drawable/button_space"
+                android:padding="1dp">
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/add_playlist_btn"
