--- a/playerFeature/src/main/res/layout/player.xml
+++ b/playerFeature/src/main/res/layout/player.xml
@@ -170,7 +170,9 @@
 
         android:layout_height="wrap_content"
         android:background="@drawable/button_space"
-        android:orientation="horizontal">
+        android:backgroundTint="#000000"
+        android:orientation="horizontal"
+        android:padding="1dp">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_rew"
