--- a/coreUI/src/main/res/drawable/panel_flat.xml
+++ b/coreUI/src/main/res/drawable/panel_flat.xml
@@ -13,21 +13,16 @@
         android:left="0dp"
         android:top="2dp"
         android:right="0dp"
-        android:bottom="2dp"
-        >
+        android:bottom="2dp">
         <shape
             android:shape="rectangle">
             <corners
                 android:radius="5dp" />
             <stroke
                 android:width="2dp"
-                android:color="?attr/shadow"
-                 />
-
+                android:color="?attr/shadow" />
                 <solid
                     android:color="?attr/primary" />
         </shape>
     </item>
-
-
 </layer-list>
