--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/player_controls"
+        android:name="com.yes.player.presentation.ui.PlayerScreen"
+        style="@style/margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </androidx.fragment.app.FragmentContainerView>
 
     <LinearLayout
         style="@style/container"
@@ -23,6 +30,7 @@
             style="@style/margin"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height_regular"
+            android:background="@drawable/panel_flat_tmp"
 
             android:theme="@style/text"
             app:tabGravity="center"
