--- a/app/src/main/res/drawable-v24/launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/launcher_foreground.xml
@@ -2,192 +2,117 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="245"
-    android:viewportHeight="245">
-  <group android:scaleX="0.83"
-      android:scaleY="0.83"
-      android:translateX="20.825"
-      android:translateY="20.825">
-    <path
-        android:pathData="M123,115.37m-84.73,0a84.73,84.73 0,1 1,169.46 0a84.73,84.73 0,1 1,-169.46 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:centerX="123"
-            android:centerY="115.37"
-            android:gradientRadius="84.73"
-            android:type="radial">
-          <item android:offset="0.75" android:color="#FFFFFFFF"/>
-          <item android:offset="0.9" android:color="#5E819CB1"/>
-          <item android:offset="1" android:color="#00396384"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,132.56m-84.73,0a84.73,84.73 0,1 1,169.46 0a84.73,84.73 0,1 1,-169.46 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:centerX="123"
-            android:centerY="132.56"
-            android:gradientRadius="84.73"
-            android:type="radial">
-          <item android:offset="0.76" android:color="#FF171717"/>
-          <item android:offset="0.96" android:color="#3032546F"/>
-          <item android:offset="1" android:color="#00396384"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,123.8m-76.3,0a76.3,76.3 0,1 1,152.6 0a76.3,76.3 0,1 1,-152.6 0"
-        android:fillColor="#434343"/>
-    <path
-        android:pathData="M123,123.8m-71.5,0a71.5,71.5 0,1 1,143 0a71.5,71.5 0,1 1,-143 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="123"
-            android:startY="195.3"
-            android:endX="123"
-            android:endY="52.3"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF28282A"/>
-          <item android:offset="1" android:color="#FFCFD1D2"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,123.8m-70,0a70,70 0,1 1,140 0a70,70 0,1 1,-140 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="123.18"
-            android:startY="59.93"
-            android:endX="122.81"
-            android:endY="188.48"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF414042"/>
-          <item android:offset="1" android:color="#FFA7A9AC"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,123.8m-57.5,0a57.5,57.5 0,1 1,115 0a57.5,57.5 0,1 1,-115 0"
-        android:fillColor="#171717"/>
-    <path
-        android:pathData="M123,123.8m-55,0a55,55 0,1 1,110 0a55,55 0,1 1,-110 0"
-        android:fillType="evenOdd">
-      <aapt:attr name="android:fillColor">
-        <gradient
-            android:centerX="123"
-            android:centerY="123"
-            android:type="sweep">
-          <item android:offset="0.00" android:color="#aaaaaa"/>
-          <item android:offset="0.05" android:color="#eeeeee"/>
-          <item android:offset="0.07" android:color="#eeeeee"/>
-          <item android:offset="0.13" android:color="#aaaaaa"/>
-          <item android:offset="0.17" android:color="#aaaaaa"/>
-          <item android:offset="0.23" android:color="#eeeeee"/>
-          <item android:offset="0.27" android:color="#eeeeee"/>
-          <item android:offset="0.33" android:color="#aaaaaa"/>
-          <item android:offset="0.37" android:color="#aaaaaa"/>
-          <item android:offset="0.43" android:color="#eeeeee"/>
-          <item android:offset="0.47" android:color="#eeeeee"/>
-          <item android:offset="0.53" android:color="#aaaaaa"/>
-          <item android:offset="0.57" android:color="#aaaaaa"/>
-          <item android:offset="0.63" android:color="#eeeeee"/>
-          <item android:offset="0.67" android:color="#eeeeee"/>
-          <item android:offset="0.73" android:color="#aaaaaa"/>
-          <item android:offset="0.77" android:color="#aaaaaa"/>
-          <item android:offset="0.83" android:color="#eeeeee"/>
-          <item android:offset="0.87" android:color="#eeeeee"/>
-          <item android:offset="0.93" android:color="#aaaaaa"/>
-          <item android:offset="0.99" android:color="#aaaaaa"/>
-          <item android:offset="1.00" android:color="#aaaaaa"/>
-        </gradient>
-      </aapt:attr>
-  </path>
-    <path
-        android:pathData="M123,123.8m-45,0a45,45 0,1 1,90 0a45,45 0,1 1,-90 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="123.13"
-            android:startY="78.8"
-            android:endX="122.87"
-            android:endY="168.8"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF414042"/>
-          <item android:offset="1" android:color="#FFA7A9AC"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,123.8m-43,0a43,43 0,1 1,86 0a43,43 0,1 1,-86 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="123"
-            android:startY="166.8"
-            android:endX="123"
-            android:endY="80.8"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF414042"/>
-          <item android:offset="1" android:color="#FFA7A9AC"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,123.8m-35,0a35,35 0,1 1,70 0a35,35 0,1 1,-70 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="123"
-            android:startY="158.8"
-            android:endX="123"
-            android:endY="88.8"
-            android:type="linear">
-          <item android:offset="0" android:color="#FF28282A"/>
-          <item android:offset="1" android:color="#FFCFD1D2"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M123,123.43m-33,0a33,33 0,1 1,66 0a33,33 0,1 1,-66 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="123"
-            android:startY="90.43"
-            android:endX="123"
-            android:endY="156.43"
-            android:type="linear">
-          <item android:offset="0" android:color="#5E819CB1"/>
-          <item android:offset="0.0" android:color="#FF3F3F4E"/>
-          <item android:offset="1" android:color="#242424"/>
-          />
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M112.39,106.54l31.3,18.07l-31.3,18.07l0,-36.14z">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="128.04"
-            android:startY="106.53"
-            android:endX="128.04"
-            android:endY="142.68"
-            android:type="linear">
-          <item android:offset="0" android:color="#FFD9D9D9"/>
-          <item android:offset="1" android:color="#FF171717"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-    <path
-        android:pathData="M137.69,124.61l-22.3,-12.88l0,25.75l22.3,-12.87z">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="126.54"
-            android:startY="137.48"
-            android:endX="126.54"
-            android:endY="111.73"
-            android:type="linear">
-          <item android:offset="0" android:color="#FFD9D9D9"/>
-          <item android:offset="1" android:color="#FF595959"/>
-        </gradient>
-      </aapt:attr>
-    </path>
+    android:viewportWidth="489.9"
+    android:viewportHeight="476.6">
+  <group android:scaleX="0.49"
+      android:scaleY="0.4766973"
+      android:translateX="124.9245"
+      android:translateY="124.70303">
+      <path
+          android:pathData="M256 295.7L256 295.7c0 0.1 0 0.1 -0.1 0.1C256 295.8 256 295.7 256 295.7z"
+          android:fillColor="#FFFFFF" />
+      <path
+          android:pathData="M484.1 327.5c-6 17.9 -68.7 12.8 -150.7 -8.5c-12.7 -3.3 -25.9 -7 -39.4 -11c12.5 -32.5 11.6 -70.9 -3.6 -102.5c-9.3 19.8 -17.9 41.2 -25.1 63.1c-1.9 6 -7.4 20.8 -9.2 27c0 0 0 0.1 -0.1 0.1c-1.4 2.9 -3.1 5.7 -4.9 8.4c-18.2 25.9 -51.3 28.4 -74 5.6s-26.2 -62.2 -8 -88.1s51.3 -28.4 74 -5.6c2.4 2.4 3.6 4.5 5.5 7.2c6.6 -16.3 14 -32.4 21.5 -46.8c8.3 -15.9 16.9 -30.4 25.6 -43c0 0 0.1 -0.1 0.1 -0.1c23.6 -34.3 47.2 -54.7 63 -49.6h0C447.8 162.4 489.3 269.8 484.1 327.5z"
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:strokeMiterLimit="10">
+          <aapt:attr
+              name="android:fillColor">
+              <gradient
+                  android:startX="246.643"
+                  android:startY="140.8312"
+                  android:endX="388.0634"
+                  android:endY="385.7784"
+                  android:tileMode="clamp">
+                  <item
+                      android:color="#39B54A"
+                      android:offset="0" />
+                  <item
+                      android:color="#006838"
+                      android:offset="1" />
+              </gradient>
+          </aapt:attr>
+      </path>
+      <path
+          android:pathData="M484.1 327.5c-0.6 6.8 -1.8 12.8 -3.7 18.1c-18.8 52.4 -127 129.9 -258.2 125.3h0c-12.8 -4.2 -18.1 -25.1 -17.7 -54.5c29.2 1.1 59.3 -9.4 85 -32.1c19.8 -17.5 34.5 -40.1 43.8 -65l0 -0.2C415.3 340.3 478 345.4 484.1 327.5z"
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:strokeMiterLimit="10">
+          <aapt:attr
+              name="android:fillColor">
+              <gradient
+                  android:startX="273.7296"
+                  android:startY="501.0546"
+                  android:endX="401.4623"
+                  android:endY="279.8151"
+                  android:tileMode="clamp">
+                  <item
+                      android:color="#2E3192"
+                      android:offset="0" />
+                  <item
+                      android:color="#00AEEF"
+                      android:offset="0.9783" />
+                  <item
+                      android:color="#1C75BC"
+                      android:offset="1" />
+              </gradient>
+          </aapt:attr>
+      </path>
+      <path
+          android:pathData="M222.2 470.9c-11 -0.4 -22.1 -1.3 -33.3 -2.9C-34.4 436.5 -12.7 299.4 40.3 176.6c-3.5 10.3 14.7 26.9 46.1 45.6c-10.6 44.5 -4.9 93.4 19.1 132.6c23.9 39 60.7 60.1 98.9 61.5C204 445.8 209.3 466.7 222.2 470.9z"
+          android:fillColor="#273988"
+          android:strokeColor="#273988"
+          android:strokeWidth="4"
+           />
+      <path
+          android:pathData="M358.7 83.7c-15.8 -5.1 -39.4 15.3 -63 49.6c-44.7 -40.4 -109.5 -41.6 -158.5 1.8c-25.6 22.6 -42.8 53.6 -50.7 87.1c-31.5 -18.7 -49.6 -35.3 -46.1 -45.6c0 0 0 0 0 0c6 -13.9 12.4 -27.7 18.9 -41c48.4 -99.5 115 -189.4 271.9 -74C340.8 68.6 350 76 358.7 83.7z"
+          android:strokeColor="#00ff00"
+          android:strokeWidth="4"
+          android:strokeMiterLimit="10">
+          <aapt:attr
+              name="android:fillColor">
+              <gradient
+                  android:startX="128.8614"
+                  android:startY="246.7149"
+                  android:endX="260.9917"
+                  android:endY="17.8584"
+                  android:tileMode="clamp">
+                  <item
+                      android:color="#2E3192"
+                      android:offset="0" />
+                  <item
+                      android:color="#00AEEF"
+                      android:offset="1" />
+              </gradient>
+          </aapt:attr>
+      </path>
+      <path
+          android:pathData="M333.4 319.2c-9.4 24.9 -24 47.5 -43.8 65c-25.8 22.8 -55.8 33.2 -85 32.1c-38.3 -1.4 -75.1 -22.5 -98.9 -61.5c-24 -39.2 -29.7 -88.1 -19.1 -132.6c8 -33.5 25.2 -64.5 50.7 -87.1c49.1 -43.3 113.8 -42.2 158.5 -1.8c0 0 -0.1 0.1 -0.1 0.1c-8.7 12.6 -17.3 27.2 -25.6 43c-7.5 14.5 -14.9 30.6 -21.5 46.8c-2 -2.7 -3.1 -4.8 -5.5 -7.2c-22.7 -22.8 -55.8 -20.3 -74 5.6c-18.2 25.9 -14.6 65.3 8 88.1c22.7 22.8 55.8 20.3 74 -5.6c1.9 -2.7 3.5 -5.5 4.9 -8.4c0 0 0 -0.1 0.1 -0.1v0c1.8 -6.2 7.3 -21 9.2 -27c7.1 -21.9 15.7 -43.3 25.1 -63.1c15.1 31.6 16.1 70 3.6 102.5c13.5 4.1 26.7 7.7 39.4 11L333.4 319.2z"
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:strokeMiterLimit="10">
+          <aapt:attr
+              name="android:fillColor">
+              <gradient
+                  android:startX="136.711"
+                  android:startY="392.3094"
+                  android:endX="289.9809"
+                  android:endY="126.8382"
+                  android:tileMode="clamp">
+                  <item
+                      android:color="#ED1C24"
+                      android:offset="0" />
+                  <item
+                      android:color="#F7941D"
+                      android:offset="1" />
+              </gradient>
+          </aapt:attr>
+      </path>
+      <path
+          android:pathData="M256 295.7L256 295.7c0 0.1 0 0.1 -0.1 0.1C256 295.8 256 295.7 256 295.7z"
+          android:fillColor="#FFFFFF" />
+      <path
+          android:pathData="M352.6 113.4C418 154.2 460.2 232 459 309.1c-2.7 -9.2 -5.3 -18.4 -8.1 -27.4C431.5 218.2 397.4 162.3 352.6 113.4L352.6 113.4z"
+          android:fillColor="#FFFFFF" />
   </group>
 </vector>
