--- a/app/src/main/res/drawable-v24/launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/launcher_foreground.xml
@@ -34,6 +34,12 @@
           </aapt:attr>
       </path>
       <path
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:pathData="M484.1 327.5c-6 17.9 -68.7 12.8 -150.7 -8.5c-12.7 -3.3 -25.9 -7 -39.4 -11c12.5 -32.5 11.6 -70.9 -3.6 -102.5c-9.3 19.8 -17.9 41.2 -25.1 63.1c-1.9 6 -7.4 20.8 -9.2 27c0 0 0 0.1 -0.1 0.1c-1.4 2.9 -3.1 5.7 -4.9 8.4c-18.2 25.9 -51.3 28.4 -74 5.6s-26.2 -62.2 -8 -88.1s51.3 -28.4 74 -5.6c2.4 2.4 3.6 4.5 5.5 7.2c6.6 -16.3 14 -32.4 21.5 -46.8c8.3 -15.9 16.9 -30.4 25.6 -43c0 0 0.1 -0.1 0.1 -0.1c23.6 -34.3 47.2 -54.7 63 -49.6h0C447.8 162.4 489.3 269.8 484.1 327.5z"
+          />
+
+      <path
           android:pathData="M484.1 327.5c-0.6 6.8 -1.8 12.8 -3.7 18.1c-18.8 52.4 -127 129.9 -258.2 125.3h0c-12.8 -4.2 -18.1 -25.1 -17.7 -54.5c29.2 1.1 59.3 -9.4 85 -32.1c19.8 -17.5 34.5 -40.1 43.8 -65l0 -0.2C415.3 340.3 478 345.4 484.1 327.5z"
           android:strokeColor="#000000"
           android:strokeWidth="4"
@@ -59,9 +65,14 @@
           </aapt:attr>
       </path>
       <path
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:pathData="M484.1 327.5c-0.6 6.8 -1.8 12.8 -3.7 18.1c-18.8 52.4 -127 129.9 -258.2 125.3h0c-12.8 -4.2 -18.1 -25.1 -17.7 -54.5c29.2 1.1 59.3 -9.4 85 -32.1c19.8 -17.5 34.5 -40.1 43.8 -65l0 -0.2C415.3 340.3 478 345.4 484.1 327.5z"
+          />
+      <path
           android:pathData="M222.2 470.9c-11 -0.4 -22.1 -1.3 -33.3 -2.9C-34.4 436.5 -12.7 299.4 40.3 176.6c-3.5 10.3 14.7 26.9 46.1 45.6c-10.6 44.5 -4.9 93.4 19.1 132.6c23.9 39 60.7 60.1 98.9 61.5C204 445.8 209.3 466.7 222.2 470.9z"
           android:fillColor="#273988"
-          android:strokeColor="#273988"
+          android:strokeColor="#000000"
           android:strokeWidth="4"
            />
       <path
@@ -87,6 +98,12 @@
           </aapt:attr>
       </path>
       <path
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:pathData="M358.7 83.7c-15.8 -5.1 -39.4 15.3 -63 49.6c-44.7 -40.4 -109.5 -41.6 -158.5 1.8c-25.6 22.6 -42.8 53.6 -50.7 87.1c-31.5 -18.7 -49.6 -35.3 -46.1 -45.6c0 0 0 0 0 0c6 -13.9 12.4 -27.7 18.9 -41c48.4 -99.5 115 -189.4 271.9 -74C340.8 68.6 350 76 358.7 83.7z"
+          />
+
+      <path
           android:pathData="M333.4 319.2c-9.4 24.9 -24 47.5 -43.8 65c-25.8 22.8 -55.8 33.2 -85 32.1c-38.3 -1.4 -75.1 -22.5 -98.9 -61.5c-24 -39.2 -29.7 -88.1 -19.1 -132.6c8 -33.5 25.2 -64.5 50.7 -87.1c49.1 -43.3 113.8 -42.2 158.5 -1.8c0 0 -0.1 0.1 -0.1 0.1c-8.7 12.6 -17.3 27.2 -25.6 43c-7.5 14.5 -14.9 30.6 -21.5 46.8c-2 -2.7 -3.1 -4.8 -5.5 -7.2c-22.7 -22.8 -55.8 -20.3 -74 5.6c-18.2 25.9 -14.6 65.3 8 88.1c22.7 22.8 55.8 20.3 74 -5.6c1.9 -2.7 3.5 -5.5 4.9 -8.4c0 0 0 -0.1 0.1 -0.1v0c1.8 -6.2 7.3 -21 9.2 -27c7.1 -21.9 15.7 -43.3 25.1 -63.1c15.1 31.6 16.1 70 3.6 102.5c13.5 4.1 26.7 7.7 39.4 11L333.4 319.2z"
           android:strokeColor="#000000"
           android:strokeWidth="4"
@@ -108,6 +125,12 @@
               </gradient>
           </aapt:attr>
       </path>
+      <path
+          android:strokeColor="#000000"
+          android:strokeWidth="4"
+          android:pathData="M333.4 319.2c-9.4 24.9 -24 47.5 -43.8 65c-25.8 22.8 -55.8 33.2 -85 32.1c-38.3 -1.4 -75.1 -22.5 -98.9 -61.5c-24 -39.2 -29.7 -88.1 -19.1 -132.6c8 -33.5 25.2 -64.5 50.7 -87.1c49.1 -43.3 113.8 -42.2 158.5 -1.8c0 0 -0.1 0.1 -0.1 0.1c-8.7 12.6 -17.3 27.2 -25.6 43c-7.5 14.5 -14.9 30.6 -21.5 46.8c-2 -2.7 -3.1 -4.8 -5.5 -7.2c-22.7 -22.8 -55.8 -20.3 -74 5.6c-18.2 25.9 -14.6 65.3 8 88.1c22.7 22.8 55.8 20.3 74 -5.6c1.9 -2.7 3.5 -5.5 4.9 -8.4c0 0 0 -0.1 0.1 -0.1v0c1.8 -6.2 7.3 -21 9.2 -27c7.1 -21.9 15.7 -43.3 25.1 -63.1c15.1 31.6 16.1 70 3.6 102.5c13.5 4.1 26.7 7.7 39.4 11L333.4 319.2z"
+          />
+
       <path
           android:pathData="M256 295.7L256 295.7c0 0.1 0 0.1 -0.1 0.1C256 295.8 256 295.7 256 295.7z"
           android:fillColor="#FFFFFF" />
