--- a/coreUI/src/main/res/color/selectable_color.xml
+++ b/coreUI/src/main/res/color/selectable_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true"
-        android:color="?attr/primary"/>
+        android:color="?attr/on_primary_activated"/>
     <item android:state_selected="false"
         android:color="?attr/transparent"/>
 </selector>
