--- a/coreUI/src/main/res/values/styles.xml
+++ b/coreUI/src/main/res/values/styles.xml
@@ -114,10 +114,12 @@
         <item name="android:clickable">false</item>
         <item name="android:focusable">true</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
         <item name="android:textColor">@color/activatable_color</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">16dp</item>
+
     </style>
     <style name="TrailingIcon">
         <item name="android:layout_width">25dp</item>
@@ -136,6 +138,16 @@
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
+    <style name="leadingText">
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">@dimen/font_size_regular</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginBottom">8dp</item>
     </style>
 
