--- a/coreUI/src/main/res/values/themes.xml
+++ b/coreUI/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MusicPlayer" parent="Theme.AppCompat">
+    <style name="Theme.MusicPlayer" parent="Theme.AppCompat.NoActionBar">
        <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splash</item>
 
