--- a/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
+++ b/playListDialogFeature/src/main/res/layout/playlist_dialog.xml
@@ -41,7 +41,7 @@
 
                     android:text="@string/newPlaylist"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="?attr/green" />
+                    android:textColor="?attr/on_primary_activated" />
             </FrameLayout>
 
             <FrameLayout
