--- a/app/src/main/res/drawable/launcher_foreground.xml
+++ b/app/src/main/res/drawable/launcher_foreground.xml
@@ -1,136 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="489.9"
-    android:viewportHeight="476.6">
-  <group android:scaleX="0.49"
-      android:scaleY="0.4766973"
-      android:translateX="124.9245"
-      android:translateY="124.70303">
-
-      <path
-          android:pathData="M484.1 327.5c-6 17.9 -68.7 12.8 -150.7 -8.5c-12.7 -3.3 -25.9 -7 -39.4 -11c12.5 -32.5 11.6 -70.9 -3.6 -102.5c-9.3 19.8 -17.9 41.2 -25.1 63.1c-1.9 6 -7.4 20.8 -9.2 27c0 0 0 0.1 -0.1 0.1c-1.4 2.9 -3.1 5.7 -4.9 8.4c-18.2 25.9 -51.3 28.4 -74 5.6s-26.2 -62.2 -8 -88.1s51.3 -28.4 74 -5.6c2.4 2.4 3.6 4.5 5.5 7.2c6.6 -16.3 14 -32.4 21.5 -46.8c8.3 -15.9 16.9 -30.4 25.6 -43c0 0 0.1 -0.1 0.1 -0.1c23.6 -34.3 47.2 -54.7 63 -49.6h0C447.8 162.4 489.3 269.8 484.1 327.5z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          android:strokeMiterLimit="10">
-          <aapt:attr
-              name="android:fillColor">
-              <gradient
-                  android:startX="246.643"
-                  android:startY="140.8312"
-                  android:endX="388.0634"
-                  android:endY="385.7784"
-                  android:tileMode="clamp">
-                  <item
-                      android:color="#39B54A"
-                      android:offset="0" />
-                  <item
-                      android:color="#006838"
-                      android:offset="1" />
-              </gradient>
-          </aapt:attr>
-      </path>
-      <path
-          android:pathData="M484.1 327.5c-6 17.9 -68.7 12.8 -150.7 -8.5c-12.7 -3.3 -25.9 -7 -39.4 -11c12.5 -32.5 11.6 -70.9 -3.6 -102.5c-9.3 19.8 -17.9 41.2 -25.1 63.1c-1.9 6 -7.4 20.8 -9.2 27c0 0 0 0.1 -0.1 0.1c-1.4 2.9 -3.1 5.7 -4.9 8.4c-18.2 25.9 -51.3 28.4 -74 5.6s-26.2 -62.2 -8 -88.1s51.3 -28.4 74 -5.6c2.4 2.4 3.6 4.5 5.5 7.2c6.6 -16.3 14 -32.4 21.5 -46.8c8.3 -15.9 16.9 -30.4 25.6 -43c0 0 0.1 -0.1 0.1 -0.1c23.6 -34.3 47.2 -54.7 63 -49.6h0C447.8 162.4 489.3 269.8 484.1 327.5z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          />
-      <path
-          android:pathData="M484.1 327.5c-0.6 6.8 -1.8 12.8 -3.7 18.1c-18.8 52.4 -127 129.9 -258.2 125.3h0c-12.8 -4.2 -18.1 -25.1 -17.7 -54.5c29.2 1.1 59.3 -9.4 85 -32.1c19.8 -17.5 34.5 -40.1 43.8 -65l0 -0.2C415.3 340.3 478 345.4 484.1 327.5z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          android:strokeMiterLimit="10">
-          <aapt:attr
-              name="android:fillColor">
-              <gradient
-                  android:startX="273.7296"
-                  android:startY="501.0546"
-                  android:endX="401.4623"
-                  android:endY="279.8151"
-                  android:tileMode="clamp">
-                  <item
-                      android:color="#2E3192"
-                      android:offset="0" />
-                  <item
-                      android:color="#00AEEF"
-                      android:offset="0.9783" />
-                  <item
-                      android:color="#1C75BC"
-                      android:offset="1" />
-              </gradient>
-          </aapt:attr>
-      </path>
-      <path
-          android:pathData="M484.1 327.5c-0.6 6.8 -1.8 12.8 -3.7 18.1c-18.8 52.4 -127 129.9 -258.2 125.3h0c-12.8 -4.2 -18.1 -25.1 -17.7 -54.5c29.2 1.1 59.3 -9.4 85 -32.1c19.8 -17.5 34.5 -40.1 43.8 -65l0 -0.2C415.3 340.3 478 345.4 484.1 327.5z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          />
-      <path
-          android:pathData="M222.2 470.9c-11 -0.4 -22.1 -1.3 -33.3 -2.9C-34.4 436.5 -12.7 299.4 40.3 176.6c-3.5 10.3 14.7 26.9 46.1 45.6c-10.6 44.5 -4.9 93.4 19.1 132.6c23.9 39 60.7 60.1 98.9 61.5C204 445.8 209.3 466.7 222.2 470.9z"
-          android:fillColor="#273988"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          android:strokeMiterLimit="10" />
-      <path
-          android:pathData="M358.7 83.7c-15.8 -5.1 -39.4 15.3 -63 49.6c-44.7 -40.4 -109.5 -41.6 -158.5 1.8c-25.6 22.6 -42.8 53.6 -50.7 87.1c-31.5 -18.7 -49.6 -35.3 -46.1 -45.6c0 0 0 0 0 0c6 -13.9 12.4 -27.7 18.9 -41c48.4 -99.5 115 -189.4 271.9 -74C340.8 68.6 350 76 358.7 83.7z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          android:strokeMiterLimit="10">
-          <aapt:attr
-              name="android:fillColor">
-              <gradient
-                  android:startX="128.8614"
-                  android:startY="246.7149"
-                  android:endX="260.9917"
-                  android:endY="17.8584"
-                  android:tileMode="clamp">
-                  <item
-                      android:color="#2E3192"
-                      android:offset="0" />
-                  <item
-                      android:color="#00AEEF"
-                      android:offset="1" />
-              </gradient>
-          </aapt:attr>
-      </path>
-      <path
-          android:pathData="M358.7 83.7c-15.8 -5.1 -39.4 15.3 -63 49.6c-44.7 -40.4 -109.5 -41.6 -158.5 1.8c-25.6 22.6 -42.8 53.6 -50.7 87.1c-31.5 -18.7 -49.6 -35.3 -46.1 -45.6c0 0 0 0 0 0c6 -13.9 12.4 -27.7 18.9 -41c48.4 -99.5 115 -189.4 271.9 -74C340.8 68.6 350 76 358.7 83.7z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-        />
-      <path
-          android:pathData="M333.4 319.2c-9.4 24.9 -24 47.5 -43.8 65c-25.8 22.8 -55.8 33.2 -85 32.1c-38.3 -1.4 -75.1 -22.5 -98.9 -61.5c-24 -39.2 -29.7 -88.1 -19.1 -132.6c8 -33.5 25.2 -64.5 50.7 -87.1c49.1 -43.3 113.8 -42.2 158.5 -1.8c0 0 -0.1 0.1 -0.1 0.1c-8.7 12.6 -17.3 27.2 -25.6 43c-7.5 14.5 -14.9 30.6 -21.5 46.8c-2 -2.7 -3.1 -4.8 -5.5 -7.2c-22.7 -22.8 -55.8 -20.3 -74 5.6c-18.2 25.9 -14.6 65.3 8 88.1c22.7 22.8 55.8 20.3 74 -5.6c1.9 -2.7 3.5 -5.5 4.9 -8.4c0 0 0 -0.1 0.1 -0.1v0c1.8 -6.2 7.3 -21 9.2 -27c7.1 -21.9 15.7 -43.3 25.1 -63.1c15.1 31.6 16.1 70 3.6 102.5c13.5 4.1 26.7 7.7 39.4 11L333.4 319.2z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          android:strokeMiterLimit="10">
-          <aapt:attr
-              name="android:fillColor">
-              <gradient
-                  android:startX="136.711"
-                  android:startY="392.3094"
-                  android:endX="289.9809"
-                  android:endY="126.8382"
-                  android:tileMode="clamp">
-                  <item
-                      android:color="#ED1C24"
-                      android:offset="0" />
-                  <item
-                      android:color="#F7941D"
-                      android:offset="1" />
-              </gradient>
-          </aapt:attr>
-      </path>
-      <path
-          android:pathData="M333.4 319.2c-9.4 24.9 -24 47.5 -43.8 65c-25.8 22.8 -55.8 33.2 -85 32.1c-38.3 -1.4 -75.1 -22.5 -98.9 -61.5c-24 -39.2 -29.7 -88.1 -19.1 -132.6c8 -33.5 25.2 -64.5 50.7 -87.1c49.1 -43.3 113.8 -42.2 158.5 -1.8c0 0 -0.1 0.1 -0.1 0.1c-8.7 12.6 -17.3 27.2 -25.6 43c-7.5 14.5 -14.9 30.6 -21.5 46.8c-2 -2.7 -3.1 -4.8 -5.5 -7.2c-22.7 -22.8 -55.8 -20.3 -74 5.6c-18.2 25.9 -14.6 65.3 8 88.1c22.7 22.8 55.8 20.3 74 -5.6c1.9 -2.7 3.5 -5.5 4.9 -8.4c0 0 0 -0.1 0.1 -0.1v0c1.8 -6.2 7.3 -21 9.2 -27c7.1 -21.9 15.7 -43.3 25.1 -63.1c15.1 31.6 16.1 70 3.6 102.5c13.5 4.1 26.7 7.7 39.4 11L333.4 319.2z"
-          android:strokeColor="#000000"
-          android:strokeWidth="4"
-          />
-      <path
-          android:pathData="M256 295.7L256 295.7c0 0.1 0 0.1 -0.1 0.1C256 295.8 256 295.7 256 295.7z"
-          android:fillColor="#FFFFFF" />
-      <path
-          android:pathData="M352.6 113.4C418 154.2 460.2 232 459 309.1c-2.7 -9.2 -5.3 -18.4 -8.1 -27.4C431.5 218.2 397.4 162.3 352.6 113.4L352.6 113.4z"
-          android:fillColor="#FFFFFF" />
+    android:viewportWidth="471.9"
+    android:viewportHeight="460.2">
+  <group android:scaleX="0.55"
+      android:scaleY="0.53636366"
+      android:translateX="106.1775"
+      android:translateY="106.682724">
+    <path
+        android:pathData="M189.3,452.8c-20.4,-1.3 -41.7,-5.3 -60.7,-11.1c-141,-44 -139.5,-129.1 -99.5,-249.9c9.2,8.6 21.1,17.4 35.2,26.3C43.1,304.1 91.9,407.3 183,418.3C183.8,431 185.3,441.8 189.3,452.8z"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M325.3,68.6c-17.5,8.5 -31.1,24.8 -43.2,41.1C196,49 99,106 69.8,198.4c-13.5,-9.1 -24.7,-18.1 -33,-26.7C108.3,9.7 179.4,-44 325.3,68.6z"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M458.1,338.3c-38.8,81.1 -159.4,113.4 -243.8,115.2c-5.3,-7.4 -11.2,-20.6 -11.3,-34.4c56.2,-2.6 102.6,-43.1 125.2,-97.9C370.2,331.1 415.2,344 458.1,338.3z"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M449,234.9c-10.3,-26.9 -24.9,-53.2 -41.5,-77.1v0c-19.1,-27.5 -41.3,-53 -66.2,-75.5c-4.9,2.3 -10,5.7 -15.3,10.1h0c-40.9,37.6 -65.4,92.8 -86.8,144c-6.4,-20.4 -24.2,-36.5 -46.9,-35.3c-50,7 -48.1,96 2.1,106c26.4,5.5 41.1,-17 46.4,-39.8c10.8,-31.2 23.2,-61.5 37.7,-90.4c23.8,31.7 29.7,79.1 17.3,117.6c52.6,13.9 114.8,34.3 167.9,21C465.6,290.1 459.9,263.9 449,234.9zM433.6,252c-11.3,-28.4 -24.6,-55.3 -40.7,-81c0,0 0,0 0,0c-14.9,-23.6 -32.4,-46.2 -51.8,-65c66,35.9 104.6,114.5 105.6,187.8C443.3,279.7 439,265.7 433.6,252z"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M310.7,316.8c-20.1,44 -58,76.2 -103.8,79.7c-0.1,0 -0.1,-0.1 -0.1,-0.2c0,0.1 0,0.1 0,0.2c-85.6,7.1 -142.9,-89.2 -125.5,-168.2C95,143.8 177.7,73.6 260.5,118.6c-0.1,0.3 -0.3,0.6 -0.4,0.9c4.3,0.8 7.9,3.5 11.4,6c-14.4,22.6 -26.5,46.5 -37.5,71.3c-19.9,-21.8 -60.6,-16.9 -78.1,4.7c-26.5,28.5 -22.1,78.9 3.9,106.1v0c23.4,28 72.2,22.3 90,-8.7c0,0 -0.1,0 -0.1,0c1.8,-5.8 3.8,-11.5 5.7,-17.1h0c7,-20.4 14.9,-40.8 22.9,-59.2c7.5,26.6 5.5,58.4 -9.4,82.3C282.7,309.2 296.8,313.2 310.7,316.8z"
+        android:fillColor="#FFFFFF"/>
   </group>
 </vector>
