--- a/app/src/main/res/values/launcher_background.xml
+++ b/app/src/main/res/values/launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="launcher_background">#FFFFFF</color>
+    <color name="launcher_background">#FF0303</color>
 </resources>
